fixed the issue caused by the opacity property where users might click an invisible button

--- a/style.css
+++ b/style.css
@@ -12,15 +12,9 @@ body {
     background-size: cover;
 }
 
-/* .container {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    gap: 6vmin;
-} */
-
 h1 {
     text-align: center;
-    font-size: calc(1.2em + 3vmin);
+    font-size: calc(1em + 3vmin);
     margin-bottom: 0;
     font-family: 'Aoboshi One', serif;
 }
@@ -30,7 +24,7 @@ h1 {
     font-size: calc(1em + 1vmin);
     width: 32vh;
     margin-top: 2vh;
-    margin-bottom: 1vh;
+    margin-bottom: 5px;
     justify-content: space-between;
 }
 
@@ -47,13 +41,12 @@ h1 {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     justify-items: center;
-    opacity: 0;
-    /* display: none; */
+    opacity: 0.9;
 }
 
 .messageStart {
     position: absolute;
-    top: 40vh;
+    top: 35vh;
     z-index: 1;
     width: calc(350vh / 12);
     padding: 4vmin 2vmin;
@@ -61,9 +54,7 @@ h1 {
     font-weight: bold;
     line-height: 2em; 
     text-align: center;
-    opacity: 0.8;
-    /* background-color: rgb(168, 212, 224);
-    border-radius: 3vmin; */
+    opacity: 0.9;
 }
 
 .playAgain {
@@ -86,7 +77,7 @@ h1 {
 
 .canvas {
     padding: 2vmin;
-    margin-bottom: 5vh;
+    /* margin-bottom: 5vh; */
     border: 3px solid rgb(171, 231, 254);
     border-radius: 5vmin;
     background-color: rgb(197, 242, 255);
@@ -94,12 +85,10 @@ h1 {
     gap: 5px;
     grid-template-columns: repeat(5, calc(70vh / 12));
     position: relative;
-    opacity: 0.8;
 }
 
 .cell {
     height: calc(70vh / 12);
-    background: lig;
 }
 
 .player, .enemy {
@@ -122,4 +111,3 @@ h1 {
     transform: rotate(180deg);
     color: lightsalmon;
 }
-
